--- a/index.html
+++ b/index.html
@@ -7,13 +7,17 @@
     <div class="container">
       <h1>Griffin Bell - IS 5315 Sec. 3</h1>
       <h2>What is Docker?</h2>
-      <p>Docker is a software containerization platform.  It is primarily designed to allow the intact and efficient transfer of files to and from the cloud.  It enables Agile development by enabling stronger collaboration with application independence. - https://www.docker.com/what-docker.</p>
+      <p>Docker is a software containerization platform.  It is primarily designed to allow the intact and efficient transfer of files to and from the cloud.  It enables Agile development by enabling stronger collaboration with application independence.</p>
+      <p>https://www.docker.com/what-docker.</p>
       <h2>What is Nginx?</h2>
-      <p>Nginx is an open source web serving software.  Nginx is designed to handle hundreds of thousands of concurrent connections, and currently sees tremendous use in most of the highest-traffic sites on the web.  - https://www.nginx.com/resources/glossary/nginx/</p>
+      <p>Nginx is an open source web serving software.  Nginx is designed to handle hundreds of thousands of concurrent connections, and currently sees tremendous use in most of the highest-traffic sites on the web.</p>
+      <p>https://www.nginx.com/resources/glossary/nginx/</p>
       <h2>What is VM (virtual machine)?</h2>
-      <p>A virtual machine is an emulation of a computer system.  Virtual machines can be cloned nearly instantly, "creating" thousands of new computers, essentially, via the cloud.  This is vastly cheaper and quicker than assembling actual new physical machines. - https://en.wikipedia.org/wiki/Virtual_machine</p>
+      <p>A virtual machine is an emulation of a computer system.  Virtual machines can be cloned nearly instantly, "creating" thousands of new computers, essentially, via the cloud.  This is vastly cheaper and quicker than assembling actual new physical machines.</p>
+      <p>https://en.wikipedia.org/wiki/Virtual_machine</p>
       <h2>Who is Cloud Computing Service Provider - DigitalOcean?</h2>
-      <p>DigitalOcean is a cloud computing infrastructure provider that enables users to create "Droplets" that allow cloud access to virtual machines.  This enables rapid scale increase at a very low monthly price, which removes the excessive hardware cost requirements that would be required should the cloud not be used. - https://en.wikipedia.org/wiki/DigitalOcean</p>
+      <p>DigitalOcean is a cloud computing infrastructure provider that enables users to create "Droplets" that allow cloud access to virtual machines.  This enables rapid scale increase at a very low monthly price, which removes the excessive hardware cost requirements that would be required should the cloud not be used.</p>
+      <p>https://en.wikipedia.org/wiki/DigitalOcean</p>
     </div>
   </body>
 </html>
